@@ -6,70 +6,69 @@ import com.electronwill.nightconfig.core.io.WritingMode;
 import net.minecraftforge.common.ForgeConfigSpec;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.List;
 
 public class NoixmodAPIMainConfig {
-    public static ForgeConfigSpec.BooleanValue TERRIBLE_SKY;
     //Villager
-    public static ForgeConfigSpec.DoubleValue VillagerMasterHealAmount;
-    public static ForgeConfigSpec.ConfigValue<List<String>> VILLAGERS_IGNORE;
+    public static final ForgeConfigSpec.DoubleValue VillagerMasterHealAmount;
+    public static final ForgeConfigSpec.ConfigValue<List<String>> VILLAGERS_IGNORE;
     //Villager End
 
-    public static ForgeConfigSpec.IntValue WormBreedCooldown;
+    public static final ForgeConfigSpec.IntValue WormBreedCooldown;
 
     //Illager
-    public static ForgeConfigSpec.BooleanValue TrumpeterJoinRaids;
-    public static ForgeConfigSpec.BooleanValue DrunkennessJoinRaids;
-    public static ForgeConfigSpec.BooleanValue FlagmanJoinRaids;
-    public static ForgeConfigSpec.BooleanValue GraveKeeperJoinRaids;
-    public static ForgeConfigSpec.BooleanValue EvokerIllagerRaid;
-    public static ForgeConfigSpec.BooleanValue BiologistRaid;
-    public static ForgeConfigSpec.BooleanValue HunterCanJoinRaid;
+    public static final ForgeConfigSpec.BooleanValue TrumpeterJoinRaids;
+    public static final ForgeConfigSpec.BooleanValue DrunkennessJoinRaids;
+    public static final ForgeConfigSpec.BooleanValue FlagmanJoinRaids;
+    public static final ForgeConfigSpec.BooleanValue GraveKeeperJoinRaids;
+    public static final ForgeConfigSpec.BooleanValue EvokerIllagerRaid;
+    public static final ForgeConfigSpec.BooleanValue BiologistRaid;
+    public static final ForgeConfigSpec.BooleanValue HunterCanJoinRaid;
 
-    public static ForgeConfigSpec.IntValue TrumpeterCheerCooldown;
+    public static final ForgeConfigSpec.IntValue TrumpeterCheerCooldown;
 
     //Raid count
-    public static ForgeConfigSpec.ConfigValue<List<? extends Integer>> ArmorerRaidCount;
-    public static ForgeConfigSpec.ConfigValue<List<? extends Integer>> DrunkennessRaidCount;
-    public static ForgeConfigSpec.ConfigValue<List<? extends Integer>> FlagmanRaidCount;
-    public static ForgeConfigSpec.ConfigValue<List<? extends Integer>> GraveKeeperRaidCount;
-    public static ForgeConfigSpec.ConfigValue<List<? extends Integer>> HunterRaidCount;
-    public static ForgeConfigSpec.ConfigValue<List<? extends Integer>> BuglerRaidCount;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends Integer>> ArmorerRaidCount;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends Integer>> DrunkennessRaidCount;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends Integer>> FlagmanRaidCount;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends Integer>> GraveKeeperRaidCount;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends Integer>> HunterRaidCount;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends Integer>> BuglerRaidCount;
     //Raid count End
 
-    public static ForgeConfigSpec.IntValue ArmorerDistributeArmorConfig;
-    public static ForgeConfigSpec.BooleanValue ArmorerJoinRaid;
-    public static ForgeConfigSpec.IntValue ArmorerArmorEnchantLevel;
-    public static ForgeConfigSpec.DoubleValue MournerDamage;
+    public static final ForgeConfigSpec.IntValue ArmorerDistributeArmorConfig;
+    public static final ForgeConfigSpec.BooleanValue ArmorerJoinRaid;
+    public static final ForgeConfigSpec.IntValue ArmorerArmorEnchantLevel;
+    public static final ForgeConfigSpec.DoubleValue MournerDamage;
     //Illager End
 
     //Abilities
     //Nihilistic
-    public static ForgeConfigSpec.BooleanValue ApostleCanCancelLivingHeal;
-    public static ForgeConfigSpec.IntValue CultistConversionInt;
-    public static ForgeConfigSpec.BooleanValue VampireBurnUnderSun;
+    public static final ForgeConfigSpec.BooleanValue ApostleCanCancelLivingHeal;
+    public static final ForgeConfigSpec.IntValue CultistConversionInt;
+    public static final ForgeConfigSpec.BooleanValue VampireBurnUnderSun;
     //Nihilistic End
     //Ab End
 
     //Spawn
-    public static ForgeConfigSpec.BooleanValue AquaticWormWillSpawn;
-    public static ForgeConfigSpec.BooleanValue IntruderWillSpawn;
-    public static ForgeConfigSpec.BooleanValue WormWillSpawn;
-    public static ForgeConfigSpec.BooleanValue VampireWillSpawn;
-    public static ForgeConfigSpec.BooleanValue NihilisticBlazeSpawn;
-    public static ForgeConfigSpec.BooleanValue GirlGhostCanSummon;
-    public static ForgeConfigSpec.BooleanValue PlateauBeastCanSummon;
-    public static ForgeConfigSpec.BooleanValue WindZombieCanSpawn;
-    public static ForgeConfigSpec.BooleanValue NihilisticOrderSpawn;
-    public static ForgeConfigSpec.BooleanValue YetiWillSpawn;
+    public static final ForgeConfigSpec.BooleanValue AquaticWormWillSpawn;
+    public static final ForgeConfigSpec.BooleanValue IntruderWillSpawn;
+    public static final ForgeConfigSpec.BooleanValue WormWillSpawn;
+    public static final ForgeConfigSpec.BooleanValue VampireWillSpawn;
+    public static final ForgeConfigSpec.BooleanValue NihilisticBlazeSpawn;
+    public static final ForgeConfigSpec.BooleanValue GirlGhostCanSummon;
+    public static final ForgeConfigSpec.BooleanValue PlateauBeastCanSummon;
+    public static final ForgeConfigSpec.BooleanValue WindZombieCanSpawn;
+    public static final ForgeConfigSpec.BooleanValue NihilisticOrderSpawn;
+    public static final ForgeConfigSpec.BooleanValue YetiWillSpawn;
     //Spawn End
     //Horror Mode
-    public static ForgeConfigSpec.BooleanValue HorrorMode;
-    public static ForgeConfigSpec.BooleanValue SpawnHorror;
-    //Horror Mode End
-
-    public static ForgeConfigSpec.BooleanValue PlayBossMusic;
+    public static final ForgeConfigSpec.BooleanValue TERRIBLE_SKY;
+    public static final ForgeConfigSpec.BooleanValue HorrorMode;
+    public static final ForgeConfigSpec.BooleanValue SpawnHorror;
+    public static final ForgeConfigSpec.BooleanValue disableXMinMap;
+    // /Horror Mode
+    public static final ForgeConfigSpec.BooleanValue PlayBossMusic;
 
     public static ForgeConfigSpec SPEC;
 
@@ -87,6 +86,7 @@ public class NoixmodAPIMainConfig {
         HorrorMode = builder.comment("No.IXAPI will be different to normal......, Default:false.Enable the following settings for a better experience.").define("API恐怖模式", false);
         TERRIBLE_SKY = builder.comment("If true, the sky will become ???.").define("TerribleSky", false);
         SpawnHorror = builder.comment("Will scaring mobs spawn?Default:false").worldRestart().define("SpawnScaringMobs", false);
+        disableXMinMap = builder.comment("Disable Xaero's Minimap?Default:true(Enable horror mode first)").define("DisableXsMinimap", true);
         builder.pop();
         builder.push("Sounds");
         PlayBossMusic = builder.comment("Will bosses play music?Default:true(Deprecated)").define("是否播放Boss音乐", true);
@@ -133,11 +133,13 @@ public class NoixmodAPIMainConfig {
         builder.push("Bugler");
         TrumpeterCheerCooldown = builder.comment("How long will trumpeters cheer illagers, Default:500").defineInRange("吹号手鼓舞灾厄村民冷却", 500, 1, Integer.MAX_VALUE);
         TrumpeterJoinRaids = builder.comment("Can trumpeters join raids, Default:true").worldRestart().define("吹号手是否加入袭击", true);
-        BuglerRaidCount = builder.comment("Bugler number in Raids.Default:0, 1, 3, 0, 2, 7, 4, 6").define("号手袭击数量", Arrays.asList(0, 1, 3, 0, 2, 7, 4, 6), (i) -> i instanceof Integer);
+        BuglerRaidCount = builder.comment("Bugler number in Raids.Default:0, 1, 3, 0, 2, 7, 4, 6")
+                .define("号手袭击数量", List.of(0, 1, 3, 0, 2, 7, 4, 6), (i) -> i instanceof Integer);
         builder.pop();
         builder.push("Drunkenness");
         DrunkennessJoinRaids = builder.comment("Will drunkenness join raids?Default:true").worldRestart().define("酒徒是否加入袭击", true);
-        DrunkennessRaidCount = builder.comment("Drunkenness number in Raids").worldRestart().define("酒徒袭击数量", Arrays.asList(0, 0, 0, 1, 2, 1, 3, 2));
+        DrunkennessRaidCount = builder.comment("Drunkenness number in Raids").worldRestart()
+                .define("酒徒袭击数量", List.of(0, 0, 0, 1, 2, 1, 3, 2));
         builder.pop();
         builder.push("Bloodsucker");
         VampireWillSpawn = builder.comment("Can bloodsuckers spawn, Default:true").worldRestart().define("吸血鬼是否生成", true);
@@ -145,11 +147,14 @@ public class NoixmodAPIMainConfig {
         builder.pop();
         builder.push("Flagman");
         FlagmanJoinRaids = builder.comment("Will flagmen join Raids?Default:true").worldRestart().define("旗手是否生成", true);
-        FlagmanRaidCount = builder.comment("Flagman number in Raids.Default:1,1,1,1,1,1,1,1").worldRestart().define("旗手袭击数量", Arrays.asList(1, 1, 1, 1, 1, 1, 1, 1), i -> i instanceof Integer);
+        FlagmanRaidCount = builder.comment("Flagman number in Raids.Default:1,1,1,1,1,1,1,1").worldRestart()
+                .define("旗手袭击数量", List.of(1, 1, 1, 1, 1, 1, 1, 1), i -> i instanceof Integer);
         builder.pop();
         builder.push("GraveKeeper");
-        GraveKeeperJoinRaids = builder.comment("Will GraveKeepers join raids?Default:true").worldRestart().define("守墓人是否加入袭击", true);
-        GraveKeeperRaidCount = builder.comment("GraveKeepers number in Raids.Default:0,0,0,0,0,0,0,1").define("守墓人袭击数量", Arrays.asList(0, 0, 0, 0, 0, 0, 0, 1));
+        GraveKeeperJoinRaids = builder.comment("Will GraveKeepers join raids?Default:true").worldRestart()
+                .define("守墓人是否加入袭击", true);
+        GraveKeeperRaidCount = builder.comment("GraveKeepers number in Raids.Default:0,0,0,0,0,0,0,1")
+                .define("守墓人袭击数量", List.of(0, 0, 0, 0, 0, 0, 0, 1));
         builder.pop();
         builder.push("Intruder");
         IntruderWillSpawn = builder.comment("Will Intruders spawn?Default:true").worldRestart().define("不速之客是否生成", true);
@@ -163,12 +168,12 @@ public class NoixmodAPIMainConfig {
                 .defineInRange("盔甲师分发何种盔甲", 0, 0, 4);
         ArmorerJoinRaid = builder.comment("Will armorers join raids ?Default:true").worldRestart().define("盔甲师加入袭击", true);
         ArmorerRaidCount = builder.comment("Armorer number in Raids.Default:0, 1, 0, 3, 4, 0, 4, 6").worldRestart().define("盔甲师加入袭击数量",
-                Arrays.asList(0, 1, 0, 3, 4, 0, 4, 6), (count) -> count instanceof Integer);
+                List.of(0, 1, 0, 3, 4, 0, 4, 6), (count) -> count instanceof Integer);
         builder.pop();
         builder.push("Hunter");
         HunterCanJoinRaid = builder.comment("Will hunters join raids ? Default:true").worldRestart().define("猎人加入袭击", true);
         HunterRaidCount = builder.comment("Hunter number in Raids.Default:0, 0, 1, 0, 3, 4, 6, 6").define("猎人袭击数量",
-                Arrays.asList(0, 0, 1, 0, 3, 4, 6, 6), (count) -> count instanceof Integer);
+                List.of(0, 0, 1, 0, 3, 4, 6, 6), (count) -> count instanceof Integer);
         builder.pop();
         builder.push("Mourner");
         MournerDamage = builder.comment("Max damage amount for mourners, Default:17").defineInRange("哀悼者最大伤害", 17D, 0D, 114514D);
